--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+.DS_STORE
+
 # Logs
 logs
 *.log
@@ -57,3 +59,29 @@ typings/
 # dotenv environment variables file
 .env
 
+# Compiled Output
+dist/
+tmp/
+
+# Angular
+bazel-*
+e2e_test.*
+
+# IDE
+pubspec.lock
+.c9
+.idea/
+.settings/
+*.swo
+modules/.settings
+.vscode
+modules/.vscode
+
+# Don't check in secret files
+*secret.js
+
+# build-analytics
+.build-analytics
+
+# rollup-test output
+/modules/rollup-test/dist/
