--- a/tth-client/package.json
+++ b/tth-client/package.json
@@ -4,11 +4,12 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
+    "prestart": "ng build --prod && ./node_modules/.bin/ngc",
+    "start": "ts-node src/server.ts",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "pree2e": "webdriver-manager update --standalone false --gecko false --quiet",
+    "test": "karma start ./karma.conf.js",
+    "e2e": "protractor ./protractor.conf.js"
   },
   "private": true,
   "dependencies": {
@@ -20,6 +21,7 @@
     "@angular/http": "^4.2.4",
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
+    "@angular/platform-server": "^4.2.4",
     "@angular/router": "^4.2.4",
     "@vimeo/player": "^2.2.1",
     "core-js": "^2.4.1",
@@ -35,7 +37,15 @@
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
+    "autoprefixer": "^6.5.3",
+    "circular-dependency-plugin": "^3.0.0",
     "codelyzer": "~3.1.1",
+    "css-loader": "^0.28.1",
+    "cssnano": "^3.10.0",
+    "exports-loader": "^0.6.3",
+    "file-loader": "^0.10.0",
+    "html-webpack-plugin": "^2.29.0",
+    "istanbul-instrumenter-loader": "^2.0.0",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "~1.7.0",
@@ -44,9 +54,22 @@
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "less-loader": "^4.0.5",
+    "node-sass": "^4.7.2",
+    "postcss-loader": "^1.3.3",
+    "postcss-url": "^5.1.2",
     "protractor": "~5.1.2",
+    "raw-loader": "^0.5.1",
+    "sass-loader": "^6.0.3",
+    "script-loader": "^0.7.0",
+    "source-map-loader": "^0.2.0",
+    "style-loader": "^0.13.1",
+    "stylus-loader": "^3.0.1",
     "ts-node": "~3.2.0",
     "tslint": "~5.3.2",
-    "typescript": "~2.3.3"
+    "typescript": "~2.3.3",
+    "url-loader": "^0.5.7",
+    "webpack": "~3.4.1",
+    "webpack-dev-server": "~2.5.1"
   }
 }
