--- a/tth-client/tsconfig.json
+++ b/tth-client/tsconfig.json
@@ -15,5 +15,9 @@
       "es2017",
       "dom"
     ]
-  }
+  },
+  "angularCompilerOptions": {
+    "genDir": "./dist/ngfactory",
+    "entryModule": "./src/app/app.module#AppModule"
+  }  
 }
