--- a/tth-client/package.json
+++ b/tth-client/package.json
@@ -23,8 +23,11 @@
     "@angular/platform-browser-dynamic": "^4.4.7",
     "@angular/platform-server": "^4.4.7",
     "@angular/router": "^4.4.7",
+    "@nguniversal/express-engine": "^5.0.0",
+    "@nguniversal/module-map-ngfactory-loader": "^5.0.0",
     "@vimeo/player": "^2.2.1",
     "core-js": "^2.4.1",
+    "express": "^4.16.3",
     "font-awesome": "^4.7.0",
     "lodash": "^4.17.4",
     "rxjs": "^5.4.2",
