--- a/tth-client/package.json
+++ b/tth-client/package.json
@@ -4,8 +4,12 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "prestart": "ng build --prod && ./node_modules/.bin/ngc",
-    "start": "ts-node src/server.ts",
+    "build:ssr": "npm run build:client-and-server-bundles && npm run webpack:server",
+    "serve:ssr": "ts-node src/server",
+    "build:client-and-server-bundles": "ng build --prod && ng run app:server",
+    "webpack:server": "webpack --config webpack.server.config.js --progress --colors",
+    "prestart": "npm run build:ssr",
+    "start": "npm run build:ssr",
     "lint": "ng lint",
     "pree2e": "webdriver-manager update --standalone false --gecko false --quiet",
     "test": "karma start ./karma.conf.js",
@@ -13,63 +17,69 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.2.4",
-    "@angular/common": "^4.2.4",
-    "@angular/compiler": "^4.2.4",
-    "@angular/core": "^4.2.4",
-    "@angular/forms": "^4.2.4",
-    "@angular/http": "^4.2.4",
-    "@angular/platform-browser": "^4.2.4",
-    "@angular/platform-browser-dynamic": "^4.2.4",
-    "@angular/platform-server": "^4.2.4",
-    "@angular/router": "^4.2.4",
-    "@vimeo/player": "^2.2.1",
-    "core-js": "^2.4.1",
+    "@angular/animations": "^6.0.5",
+    "@angular/common": "^6.0.5",
+    "@angular/compiler": "^6.0.5",
+    "@angular/core": "^6.0.0",
+    "@angular/forms": "^6.0.5",
+    "@angular/http": "^6.0.5",
+    "@angular/platform-browser": "^6.0.5",
+    "@angular/platform-browser-dynamic": "^6.0.5",
+    "@angular/platform-server": "^6.0.5",
+    "@angular/router": "^6.0.5",
+    "@types/lodash": "^4.14.110",
+    "@vimeo/player": "^2.6.1",
+    "core-js": "^2.5.7",
     "font-awesome": "^4.7.0",
-    "lodash": "^4.17.4",
-    "rxjs": "^5.4.2",
-    "zone.js": "^0.8.14"
+    "hoek": "^5.0.3",
+    "lodash": "^4.17.10",
+    "rxjs": "^6.2.1",
+    "rxjs-compat": "^6.0.0-rc.0",
+    "ts-loader": "^4.4.2",
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "1.3.0",
-    "@angular/compiler-cli": "^4.2.4",
-    "@angular/language-service": "^4.2.4",
+    "@angular-devkit/build-angular": "~0.6.8",
+    "@angular/cli": "^6.0.8",
+    "@angular/compiler-cli": "^6.0.5",
+    "@angular/language-service": "^6.0.5",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
+    "@types/node": "^6.0.113",
+    "ajv": "^6.5.1",
     "autoprefixer": "^6.5.3",
     "circular-dependency-plugin": "^3.0.0",
-    "codelyzer": "~3.1.1",
-    "css-loader": "^0.28.1",
+    "codelyzer": "^4.3.0",
+    "css-loader": "^0.28.11",
     "cssnano": "^3.10.0",
-    "exports-loader": "^0.6.3",
+    "expor^oader": "^0.6.3",
     "file-loader": "^0.10.0",
-    "html-webpack-plugin": "^2.29.0",
+    "html-webpack-plugin": "^3.2.0",
     "istanbul-instrumenter-loader": "^2.0.0",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
-    "karma": "~1.7.0",
+    "karma": "^2.0.2",
     "karma-chrome-launcher": "~2.1.1",
     "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
+    "karma-coverage-istanbul-reporter": "^1.4.3",
+    "karma-jasmine": "^1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "less-loader": "^4.0.5",
-    "node-sass": "^4.7.2",
-    "postcss-loader": "^1.3.3",
-    "postcss-url": "^5.1.2",
-    "protractor": "~5.1.2",
+    "less-loader": "^4.1.0",
+    "node-sass": "^4.9.0",
+    "postcss-loader": "^2.1.5",
+    "postcss-url": "^7.3.2",
+    "protractor": "^5.3.2",
     "raw-loader": "^0.5.1",
-    "sass-loader": "^6.0.3",
+    "sass-loader": "^6.0.7",
     "script-loader": "^0.7.0",
     "source-map-loader": "^0.2.0",
     "style-loader": "^0.13.1",
-    "stylus-loader": "^3.0.1",
+    "stylus-loader": "^3.0.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.3.2",
-    "typescript": "~2.3.3",
-    "url-loader": "^0.5.7",
-    "webpack": "~3.4.1",
-    "webpack-dev-server": "~2.5.1"
+    "typescript": "2.7.2",
+    "url-loader": "^1.0.1",
+    "webpack": "^4.12.0",
+    "webpack-cli": "^3.0.8"
   }
 }
