--- a/tth-client/src/tsconfig.app.json
+++ b/tth-client/src/tsconfig.app.json
@@ -1,14 +1,21 @@
+// {
+//   "extends": "../tsconfig.json",
+//   "compilerOptions": {
+//     "outDir": "../out-tsc/app",
+//     "baseUrl": "./",
+//     "module": "es2015",
+//     "types": []
+//   },
+//   "exclude": [
+//     "test.ts",
+//     "**/*.spec.ts",
+//     "server.ts"
+//   ]
+// }
 {
-  "extends": "../tsconfig.json",
-  "compilerOptions": {
-    "outDir": "../out-tsc/app",
-    "baseUrl": "./",
-    "module": "es2015",
-    "types": []
-  },
-  "exclude": [
-    "test.ts",
-    "**/*.spec.ts",
-    "server.ts"
-  ]
+    "extends": "../tsconfig.json",
+    "angularCompilerOptions": {
+        "entryModule": "./app/app.module#AppModule"
+    },
+    "exclude": ["test.ts", "**/*.spec.ts"]
 }
