--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "codelyzer": "^4.3.0",
     "css-loader": "^0.28.11",
     "cssnano": "^3.10.0",
-    "expor^oader": "^0.6.3",
+    "exports-loader": "^0.6.3",
     "file-loader": "^0.10.0",
     "html-webpack-plugin": "^3.2.0",
     "istanbul-instrumenter-loader": "^2.0.0",
