--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.0.0",
   "license": "MIT",
   "engines": {
-    "node": "10.4.1",
-    "npm": "3.10.10"
+    "node": "10.4.1"
   },
   "scripts": {
     "ng": "ng",
