--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
   "dependencies": {
     "@angular-devkit/build-angular": "~0.6.8",
     "@angular/animations": "^6.0.5",
+    "@angular/cli": "^6.0.8",
     "@angular/common": "^6.0.5",
     "@angular/compiler": "^6.0.5",
+    "@angular/compiler-cli": "^6.0.5",
     "@angular/core": "^6.0.0",
     "@angular/forms": "^6.0.5",
     "@angular/http": "^6.0.5",
@@ -31,24 +33,30 @@
     "@angular/platform-browser-dynamic": "^6.0.5",
     "@angular/platform-server": "^6.0.5",
     "@angular/router": "^6.0.5",
+    "@types/jasmine": "~2.5.53",
+    "@types/jasminewd2": "~2.0.2",
     "@types/lodash": "^4.14.110",
+    "@types/node": "^6.0.113",
     "@vimeo/player": "^2.6.1",
     "core-js": "^2.5.7",
     "font-awesome": "^4.7.0",
     "hoek": "^5.0.3",
     "lodash": "^4.17.10",
+    "protractor": "^5.3.2",
     "rxjs": "^6.2.1",
     "rxjs-compat": "^6.0.0-rc.0",
     "ts-loader": "^4.4.2",
+    "ts-node": "~3.2.0",
+    "typescript": "2.7.2",
+    "webpack": "^4.12.0",
+    "webpack-cli": "^3.0.8",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
     "@angular/cli": "^6.0.8",
+    "@angular/compiler": "^6.0.5",
     "@angular/compiler-cli": "^6.0.5",
     "@angular/language-service": "^6.0.5",
-    "@types/jasmine": "~2.5.53",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/node": "^6.0.113",
     "ajv": "^6.5.1",
     "autoprefixer": "^6.5.3",
     "circular-dependency-plugin": "^3.0.0",
@@ -71,18 +79,14 @@
     "node-sass": "^4.9.0",
     "postcss-loader": "^2.1.5",
     "postcss-url": "^7.3.2",
-    "protractor": "^5.3.2",
     "raw-loader": "^0.5.1",
     "sass-loader": "^6.0.7",
     "script-loader": "^0.7.0",
     "source-map-loader": "^0.2.0",
     "style-loader": "^0.13.1",
     "stylus-loader": "^3.0.2",
-    "ts-node": "~3.2.0",
     "tslint": "~5.3.2",
     "typescript": "2.7.2",
-    "url-loader": "^1.0.1",
-    "webpack": "^4.12.0",
-    "webpack-cli": "^3.0.8"
+    "url-loader": "^1.0.1"
   }
 }
