--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "serve:ssr": "ts-node --optimize_for_size --max_old_space_size=460 --gc_interval=100 src/server",
     "build:client-and-server-bundles": "node --max_old_space_size=460 ./node_modules/.bin/ng build && node --max_old_space_size=460 ./node_modules/.bin/ng run app:server",
     "webpack:server": "webpack --config webpack.server.config.js --progress --colors",
-    "prestart": "npm run build:ssr",
+    "postinstall": "npm run build:ssr",
     "start": "npm run serve:ssr",
     "lint": "ng lint",
     "pree2e": "webdriver-manager update --standalone false --gecko false --quiet",
