--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@types/node": "^6.0.113",
     "@vimeo/player": "^2.6.1",
     "core-js": "^2.5.7",
-    "font-awesome": "^4.7.0",
+//    "font-awesome": "^4.7.0",
     "hoek": "^5.0.3",
     "lodash": "^4.17.10",
     "protractor": "^5.3.2",
