--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "core-js": "^2.5.7",
     "hoek": "^5.0.3",
     "lodash": "^4.17.10",
+    "ngx-youtube-player": "^6.0.0",
     "protractor": "^5.3.2",
     "rxjs": "^6.2.1",
     "rxjs-compat": "^6.0.0-rc.0",
