--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "node": "10.4.1"
   },
   "scripts": {
-    "ng": "ng",
+    "ng": "./node_modules/.bin/ng",
     "build:ssr": "npm run build:client-and-server-bundles && npm run webpack:server",
     "serve:ssr": "ts-node --optimize_for_size --max_old_space_size=460 --gc_interval=100 src/server",
     "build:client-and-server-bundles": "node --max_old_space_size=460 ./node_modules/.bin/ng build && node --max_old_space_size=460 ./node_modules/.bin/ng run app:server",
@@ -14,7 +14,7 @@
     "install-prod": "npm run install --only=production",
     "postinstall": "npm run build:ssr",
     "start": "npm run serve:ssr",
-    "lint": "ng lint",
+    "lint": "npm run ng lint",
     "pree2e": "webdriver-manager update --standalone false --gecko false --quiet",
     "test": "karma start ./karma.conf.js",
     "e2e": "protractor ./protractor.conf.js"
@@ -42,7 +42,6 @@
     "core-js": "^2.5.7",
     "hoek": "^5.0.3",
     "lodash": "^4.17.10",
-    "ngx-youtube-player": "^6.0.0",
     "protractor": "^5.3.2",
     "rxjs": "^6.2.1",
     "rxjs-compat": "^6.0.0-rc.0",
