--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
   "version": "0.0.0",
   "license": "MIT",
   "engines": {
-    "node": "10.4.1"
+    "node": "8.11.3"
   },
   "scripts": {
     "ng": "./node_modules/.bin/ng",
     "build:ssr": "npm run build:client-and-server-bundles && npm run webpack:server",
-    "serve:ssr": "ts-node --optimize_for_size --max_old_space_size=460 --gc_interval=100 src/server",
-    "build:client-and-server-bundles": "node --max_old_space_size=460 ./node_modules/.bin/ng build && node --max_old_space_size=460 ./node_modules/.bin/ng run app:server",
-    "webpack:server": "webpack --config webpack.server.config.js --progress --colors",
-    "install-prod": "npm run install --only=production",
+    "serve:ssr": "ts-node ./src/server",
+    "build:client-and-server-bundles": "node ./node_modules/.bin/ng build && node ./node_modules/.bin/ng run app:server",
+    "webpack:server": "webpack --config ./webpack.server.config.js --progress --colors",
+    "install-dev": "npm install --only=development",
     "postinstall": "npm run build:ssr",
     "start": "npm run serve:ssr",
     "lint": "npm run ng lint",
