--- a/package.json
+++ b/package.json
@@ -35,15 +35,15 @@
     "@angular/router": "^6.0.5",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
-    "@types/lodash": "^4.14.110",
+    "@types/lodash": "4.14.121",
     "@types/node": "^6.0.113",
     "@vimeo/player": "^2.6.3",
     "core-js": "^2.5.7",
     "hoek": "^5.0.3",
-    "lodash": "^4.17.10",
+    "lodash": "^4.14.1",
     "protractor": "^5.3.2",
-    "rxjs": "^6.2.1",
-    "rxjs-compat": "^6.0.0-rc.0",
+    "rxjs": "6.0.0",
+    "rxjs-compat": "6.0.0",
     "ts-loader": "^4.4.2",
     "ts-node": "~3.2.0",
     "typescript": "2.7.2",
@@ -85,7 +85,7 @@
     "style-loader": "^0.13.1",
     "stylus-loader": "^3.0.2",
     "tslint": "~5.3.2",
-    "typescript": "2.7.2",
-    "url-loader": "^1.0.1"
+    "url-loader": "^1.0.1",
+    "webapps-reschke-common": "file:../webapps-reschke-common"
   }
 }
