--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@angular/common": "^6.0.5",
     "@angular/compiler": "^6.0.5",
     "@angular/compiler-cli": "^6.0.5",
-    "@angular/core": "^6.0.0",
+    "@angular/core": "6.0.7",
     "@angular/forms": "^6.0.5",
     "@angular/http": "^6.0.5",
     "@angular/platform-browser": "^6.0.5",
@@ -36,7 +36,7 @@
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/lodash": "4.14.121",
-    "@types/node": "^6.0.113",
+    "@types/node": "~8.9.4",
     "@vimeo/player": "^2.6.3",
     "core-js": "^2.5.7",
     "hoek": "^5.0.3",
@@ -47,6 +47,7 @@
     "ts-loader": "^4.4.2",
     "ts-node": "~3.2.0",
     "typescript": "2.7.2",
+    "webapps-reschke-common": "file:../webapps-reschke-common/dist",
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.8",
     "zone.js": "^0.8.26"
@@ -85,7 +86,6 @@
     "style-loader": "^0.13.1",
     "stylus-loader": "^3.0.2",
     "tslint": "~5.3.2",
-    "url-loader": "^1.0.1",
-    "webapps-reschke-common": "file:../webapps-reschke-common"
+    "url-loader": "^1.0.1"
   }
 }
