--- a/package.json
+++ b/package.json
@@ -21,18 +21,18 @@
   "private": true,
   "dependencies": {
     "@angular-devkit/build-angular": "~0.6.8",
-    "@angular/animations": "^6.0.5",
-    "@angular/cli": "^6.0.8",
-    "@angular/common": "^6.0.5",
-    "@angular/compiler": "^6.0.5",
-    "@angular/compiler-cli": "^6.0.5",
-    "@angular/core": "6.0.7",
-    "@angular/forms": "^6.0.5",
-    "@angular/http": "^6.0.5",
-    "@angular/platform-browser": "^6.0.5",
-    "@angular/platform-browser-dynamic": "^6.0.5",
-    "@angular/platform-server": "^6.0.5",
-    "@angular/router": "^6.0.5",
+    "@angular/animations": "6.0.5",
+    "@angular/cli": "6.0.8",
+    "@angular/common": "6.0.5",
+    "@angular/compiler": "6.0.5",
+    "@angular/compiler-cli": "6.0.5",
+    "@angular/core": "6.0.5",
+    "@angular/forms": "6.0.5",
+    "@angular/http": "6.0.5",
+    "@angular/platform-browser": "6.0.5",
+    "@angular/platform-browser-dynamic": "6.0.5",
+    "@angular/platform-server": "6.0.5",
+    "@angular/router": "6.0.5",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/lodash": "4.14.121",
@@ -53,10 +53,7 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "^6.0.8",
-    "@angular/compiler": "^6.0.5",
-    "@angular/compiler-cli": "^6.0.5",
-    "@angular/language-service": "^6.0.5",
+    "@angular/language-service": "6.0.5",
     "ajv": "^6.5.1",
     "autoprefixer": "^6.5.3",
     "circular-dependency-plugin": "^3.0.0",
