--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,9 @@
     "../webapps-reschke-common/**/*.ts"
   ],
   "angularCompilerOptions": {
-    "entryModule": "./src/app/app.module#AppModule"
+    "entryModule": "./src/app/app.module#AppModule",
+    "skipTemplateCodegen": true,
+    "strictMetadataEmit": true,
+    "fullTemplateTypeCheck": true
   }
 }
