--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "ts-loader": "^4.4.2",
     "ts-node": "~3.2.0",
     "typescript": "2.7.2",
-    "webapps-reschke-common": "file:../webapps-reschke-common",
+    "webapps-reschke-common": "git+https://github.com/NickResky/webapps-reschke-common.git",
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.8",
     "zone.js": "^0.8.26"
