--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "ng": "./node_modules/.bin/ng",
     "build:ssr": "npm run build:client-and-server-bundles && npm run webpack:server",
     "serve:ssr": "ts-node ./src/server",
-    "build:client-and-server-bundles": "node ./node_modules/.bin/ng build && node ./node_modules/.bin/ng run app:server",
+    "build:client-and-server-bundles": "node ng build && node ng test",
     "webpack:server": "webpack --config ./webpack.server.config.js --progress --colors",
     "install-dev": "npm install --only=development",
     "start": "npm run serve:ssr",
@@ -47,7 +47,7 @@
     "ts-loader": "^4.4.2",
     "ts-node": "~3.2.0",
     "typescript": "2.7.2",
-    "webapps-reschke-common": "git+https://github.com/NickResky/webapps-reschke-common.git",
+    "webapps-reschke-common": "file:../webapps-reschke-common/dist",
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.8",
     "zone.js": "^0.8.26"
