Improve build setup

--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
   },
   "scripts": {
     "ng": "./node_modules/.bin/ng",
-    "build:ssr": "npm run build:client-and-server-bundles && npm run webpack:server",
     "serve:ssr": "ts-node ./src/server",
+    "build:ssr": "build:ssr:setup && npm run build:client-and-server-bundles && npm run webpack:server",
+    "build:ssr:windows": "build:ssr:setup && npm run build:client-and-server-bundles:windows && npm run webpack:server",
+    "build:ssr:setup": "node setup_production_build.js",
     "build:client-and-server-bundles": "node ng build && node ng test",
+    "build:client-and-server-bundles:windows": "npm run ng build && npm run ng test",
     "webpack:server": "webpack --config ./webpack.server.config.js --progress --colors",
     "install-dev": "npm install --only=development",
     "start": "npm run serve:ssr",
@@ -47,7 +50,7 @@
     "ts-loader": "^4.4.2",
     "ts-node": "~3.2.0",
     "typescript": "2.7.2",
-    "webapps-reschke-common": "file:../webapps-reschke-common/dist",
+    "webapps-reschke-common": "file:../webapps-reschke-common",
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.8",
     "zone.js": "^0.8.26"
@@ -79,6 +82,7 @@
     "raw-loader": "^0.5.1",
     "sass-loader": "^6.0.7",
     "script-loader": "^0.7.0",
+    "shelljs": "^0.8.3",
     "source-map-loader": "^0.2.0",
     "style-loader": "^0.13.1",
     "stylus-loader": "^3.0.2",
