--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -14,11 +14,21 @@
 // }
 {
     "extends": "../tsconfig.json",
-    "angularCompilerOptions": {
-        "entryModule": "./app/app.module#AppModule",
-        "skipTemplateCodegen": true,
-        "strictMetadataEmit": true,
-        "fullTemplateTypeCheck": true
+    "compilerOptions": {
+        "paths": {
+            "webapps-reschke-common": ["node_modules/webapps-reschke-common"]
+        }
     },
-    "exclude": ["test.ts", "**/*.spec.ts"]
+    "angularCompilerOptions": {
+        "entryModule": "./app/app.module#AppModule"
+    },
+    "exclude": ["test.ts", "**/*.spec.ts"],
+    "include": [
+        "*.ts",
+        "**/*.ts",
+        "node_modules/webapps-reschke-common/*.ts",
+        "node_modules/webapps-reschke-common/**/*.ts",
+        "../webapps-reschke-common/*.ts",
+        "../webapps-reschke-common/**/*.ts"
+    ]
 }
