--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -16,19 +16,11 @@
     "extends": "../tsconfig.json",
     "compilerOptions": {
         "paths": {
-            "webapps-reschke-common": ["node_modules/webapps-reschke-common"]
+            "webapps-reschke-common": ["node_modules/webapps-reschke-common/public_api.ts"]
         }
     },
     "angularCompilerOptions": {
         "entryModule": "./app/app.module#AppModule"
     },
-    "exclude": ["test.ts", "**/*.spec.ts"],
-    "include": [
-        "*.ts",
-        "**/*.ts",
-        "node_modules/webapps-reschke-common/*.ts",
-        "node_modules/webapps-reschke-common/**/*.ts",
-        "../webapps-reschke-common/*.ts",
-        "../webapps-reschke-common/**/*.ts"
-    ]
+    "exclude": ["test.ts", "**/*.spec.ts"]
 }
