--- a/src/tsconfig.server.json
+++ b/src/tsconfig.server.json
@@ -8,6 +8,7 @@
     "angularCompilerOptions": {
         "entryModule": "./app/app-server.module#AppServerModule"
     },
+    "include": [],
     "exclude": [
         "node_modules/*"
     ]
