--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,26 +1,30 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
-    "outDir": "./dist/out-tsc",
-    "sourceMap": true,
-    "declaration": false,
-    "moduleResolution": "node",
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "target": "es5",
-    "baseUrl": "./",
-    "typeRoots": [
-      "node_modules/@types"
-    ],
-    "lib": [
-      "es2017",
-      "dom"
-    ]
+      "outDir": "./dist/out-tsc",
+      "sourceMap": true,
+      "declaration": false,
+      "moduleResolution": "node",
+      "emitDecoratorMetadata": true,
+      "experimentalDecorators": true,
+      "target": "es5",
+      "baseUrl": "./",
+      "typeRoots": [
+          "node_modules/@types"
+      ],
+      "lib": [
+          "es2017",
+          "dom"
+      ]
   },
   "angularCompilerOptions": {
-    "entryModule": "./src/app/app.module#AppModule",
-    "skipTemplateCodegen": true,
-    "strictMetadataEmit": true,
-    "fullTemplateTypeCheck": true
-  }
+      "entryModule": "./src/app/app-server.module#AppServerModule"
+  },
+  "include": [
+      "src/*.ts",
+      "src/**/*.ts"
+  ],
+  "exclude": [
+      "node_modules/**/*.ts"
+  ]
 }
