Extract navigation component

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -21,7 +21,8 @@
         "@angular/*": [ "node_modules/@angular/*"],
         "@types/*": [ "node_modules/@types/*"],
         "lodash": [ "node_modules/lodash"],
-        "rxjs": [ "node_modules/rxjs"]
+        "rxjs": [ "node_modules/rxjs"],
+        "rxjs/*": [ "node_modules/rxjs/*"]
       },
     },
     "angularCompilerOptions": {
