--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -17,8 +17,12 @@
             "dom"
         ],
         "paths": {
-            "webapps-reschke-common": ["node_modules/webapps-reschke-common/dist/bundles/webapps-reschke-common.umd.js"],
-            "@angular/*": [ "../node_modules/@angular/*"]
+            "webapps-reschke-common": ["node_modules/webapps-reschke-common/public_api.ts"],
+            "@angular/*": [ "node_modules/@angular/*"],
+            "@types/*": [ "node_modules/@types/*"],
+            "lodash": [ "node_modules/lodash"],
+            "rxjs": [ "node_modules/rxjs"],
+            "rxjs/*": [ "node_modules/rxjs/*"]
         }
     },
     "angularCompilerOptions": {
@@ -26,7 +30,11 @@
     },
     "include": [
         "src/*.ts",
-        "src/**/*.ts"
+        "src/**/*.ts",
+        "node_modules/webapps-reschke-common/*.ts",
+        "node_modules/webapps-reschke-common/**/*.ts",
+        "../webapps-reschke-common/*.ts",
+        "../webapps-reschke-common/**/*.ts"
     ],
     "exclude": [
         "node_modules/**/*.ts"
