--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "node": "8.11.3"
   },
   "scripts": {
+    "start-local": "ng serve",
     "ng": "./node_modules/.bin/ng",
     "build:ssr": "npm run build:client-and-server-bundles && npm run webpack:server",
     "serve:ssr": "ts-node ./src/server",
@@ -20,46 +21,45 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/build-angular": "~0.6.8",
-    "@angular/animations": "^6.0.5",
-    "@angular/cli": "^6.0.8",
-    "@angular/common": "^6.0.5",
-    "@angular/compiler": "^6.0.5",
-    "@angular/compiler-cli": "^6.0.5",
-    "@angular/core": "^6.0.0",
-    "@angular/forms": "^6.0.5",
-    "@angular/http": "^6.0.5",
-    "@angular/platform-browser": "^6.0.5",
-    "@angular/platform-browser-dynamic": "^6.0.5",
-    "@angular/platform-server": "^6.0.5",
-    "@angular/router": "^6.0.5",
+    "@angular-devkit/build-angular": "~0.13.0",
+    "@angular/animations": "^7.2.16",
+    "@angular/common": "^7.2.16",
+    "@angular/core": "^7.2.16",
+    "@angular/forms": "^7.2.16",
+    "@angular/http": "^7.2.16",
+    "@angular/platform-browser": "^7.2.16",
+    "@angular/platform-browser-dynamic": "^7.2.16",
+    "@angular/platform-server": "^7.2.16",
+    "@angular/router": "^7.2.16",
     "@types/jasmine": "~2.5.53",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/lodash": "^4.14.110",
-    "@types/node": "^6.0.113",
-    "@vimeo/player": "^2.6.3",
-    "core-js": "^2.5.7",
-    "hoek": "^5.0.3",
-    "lodash": "^4.17.10",
-    "protractor": "^5.3.2",
-    "rxjs": "^6.2.1",
-    "rxjs-compat": "^6.0.0-rc.0",
-    "ts-loader": "^4.4.2",
+    "@types/jasminewd2": "^2.0.10",
+    "@types/lodash": "^4.14.179",
+    "@types/node": "^6.14.13",
+    "@vimeo/player": "^2.16.4",
+    "bowser": "^2.11.0",
+    "core-js": "^2.6.12",
+    "hoek": "^5.0.4",
+    "lodash": "^4.17.21",
+    "protractor": "^5.4.4",
+    "rxjs": "^6.6.7",
+    "rxjs-compat": "^6.6.7",
+    "ts-loader": "^4.5.0",
     "ts-node": "~3.2.0",
-    "typescript": "2.7.2",
-    "webpack": "^4.12.0",
-    "webpack-cli": "^3.0.8",
-    "zone.js": "^0.8.26"
+    "tslib": "^1.9.0",
+    "typescript": "3.2.4",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^3.3.12",
+    "zone.js": "^0.8.29"
   },
   "devDependencies": {
-    "@angular/cli": "^6.0.8",
-    "@angular/compiler": "^6.0.5",
-    "@angular/compiler-cli": "^6.0.5",
-    "@angular/language-service": "^6.0.5",
-    "ajv": "^6.5.1",
+    "@angular/cli": "^7.3.10",
+    "@angular/compiler": "^7.2.16",
+    "@angular/compiler-cli": "^7.2.16",
+    "@angular/language-service": "^7.2.16",
+    "ajv": "^6.12.6",
     "autoprefixer": "^6.5.3",
     "circular-dependency-plugin": "^3.0.0",
-    "codelyzer": "^4.3.0",
+    "codelyzer": "^4.5.0",
     "css-loader": "^0.28.11",
     "cssnano": "^3.10.0",
     "exports-loader": "^0.6.3",
@@ -68,7 +68,7 @@
     "istanbul-instrumenter-loader": "^2.0.0",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
-    "karma": "^2.0.2",
+    "karma": "^2.0.5",
     "karma-chrome-launcher": "~2.1.1",
     "karma-cli": "~1.0.1",
     "karma-coverage-istanbul-reporter": "^1.4.3",
@@ -81,11 +81,10 @@
     "raw-loader": "^0.5.1",
     "sass-loader": "^6.0.7",
     "script-loader": "^0.7.0",
-    "source-map-loader": "^0.2.0",
+    "source-map-loader": "^0.2.4",
     "style-loader": "^0.13.1",
     "stylus-loader": "^3.0.2",
     "tslint": "~5.3.2",
-    "typescript": "2.7.2",
-    "url-loader": "^1.0.1"
+    "url-loader": "^1.1.2"
   }
 }
