--- a/package.json
+++ b/package.json
@@ -21,16 +21,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/build-angular": "~0.13.0",
-    "@angular/animations": "^7.2.16",
-    "@angular/common": "^7.2.16",
-    "@angular/core": "^7.2.16",
-    "@angular/forms": "^7.2.16",
-    "@angular/http": "^7.2.16",
-    "@angular/platform-browser": "^7.2.16",
-    "@angular/platform-browser-dynamic": "^7.2.16",
-    "@angular/platform-server": "^7.2.16",
-    "@angular/router": "^7.2.16",
+    "@angular-devkit/build-angular": "~0.803.29",
+    "@angular/animations": "^8.2.14",
+    "@angular/common": "^8.2.14",
+    "@angular/core": "^8.2.14",
+    "@angular/forms": "^8.2.14",
+    "@angular/platform-browser": "^8.2.14",
+    "@angular/platform-browser-dynamic": "^8.2.14",
+    "@angular/platform-server": "^8.2.14",
+    "@angular/router": "^8.2.14",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "^2.0.10",
     "@types/lodash": "^4.14.179",
@@ -46,20 +45,20 @@
     "ts-loader": "^4.5.0",
     "ts-node": "~3.2.0",
     "tslib": "^1.9.0",
-    "typescript": "3.2.4",
+    "typescript": "3.5.3",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12",
-    "zone.js": "^0.8.29"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular/cli": "^7.3.10",
-    "@angular/compiler": "^7.2.16",
-    "@angular/compiler-cli": "^7.2.16",
-    "@angular/language-service": "^7.2.16",
+    "@angular/cli": "^8.3.29",
+    "@angular/compiler": "^8.2.14",
+    "@angular/compiler-cli": "^8.2.14",
+    "@angular/language-service": "^8.2.14",
     "ajv": "^6.12.6",
     "autoprefixer": "^6.5.3",
     "circular-dependency-plugin": "^3.0.0",
-    "codelyzer": "^4.5.0",
+    "codelyzer": "^5.0.1",
     "css-loader": "^0.28.11",
     "cssnano": "^3.10.0",
     "exports-loader": "^0.6.3",
