:arrow_up: update to Angular 9

--- a/src/tsconfig.server.json
+++ b/src/tsconfig.server.json
@@ -17,5 +17,10 @@
     "angularCompilerOptions": {
         "entryModule": "./app/app-server.module#AppServerModule"
     },
-    "exclude": []
+  "files": [
+    "main-server.ts"
+  ],
+  "include": [
+    "src/**/*.d.ts"
+  ]
 }
