--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -17,5 +17,11 @@
     "angularCompilerOptions": {
         "entryModule": "./app/app.module#AppModule"
     },
-    "exclude": ["test.ts", "**/*.spec.ts"]
+  "files": [
+    "main.ts",
+    "polyfills.ts"
+  ],
+  "include": [
+    "src/**/*.d.ts"
+  ]
 }
