--- a/package.json
+++ b/package.json
@@ -21,15 +21,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/build-angular": "~0.901.15",
-    "@angular/animations": "^9.1.13",
-    "@angular/common": "^9.1.13",
-    "@angular/core": "^9.1.13",
-    "@angular/forms": "^9.1.13",
-    "@angular/platform-browser": "^9.1.13",
-    "@angular/platform-browser-dynamic": "^9.1.13",
-    "@angular/platform-server": "^9.1.13",
-    "@angular/router": "^9.1.13",
+    "@angular-devkit/build-angular": "~0.1002.4",
+    "@angular/animations": "^10.2.5",
+    "@angular/common": "^10.2.5",
+    "@angular/core": "^10.2.5",
+    "@angular/forms": "^10.2.5",
+    "@angular/platform-browser": "^10.2.5",
+    "@angular/platform-browser-dynamic": "^10.2.5",
+    "@angular/platform-server": "^10.2.5",
+    "@angular/router": "^10.2.5",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "^2.0.10",
     "@types/lodash": "^4.14.179",
@@ -39,22 +39,22 @@
     "core-js": "^2.6.12",
     "hoek": "^5.0.4",
     "lodash": "^4.17.21",
-    "protractor": "^5.4.4",
+    "protractor": "~7.0.0",
     "rxjs": "^6.6.7",
     "rxjs-compat": "^6.6.7",
     "ts-loader": "^4.5.0",
     "ts-node": "~3.2.0",
-    "tslib": "^1.10.0",
-    "typescript": "3.8.3",
+    "tslib": "^2.0.0",
+    "typescript": "4.0.8",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular/cli": "^9.1.15",
-    "@angular/compiler": "^9.1.13",
-    "@angular/compiler-cli": "^9.1.13",
-    "@angular/language-service": "^9.1.13",
+    "@angular/cli": "^10.2.4",
+    "@angular/compiler": "^10.2.5",
+    "@angular/compiler-cli": "^10.2.5",
+    "@angular/language-service": "^10.2.5",
     "ajv": "^6.12.6",
     "autoprefixer": "^6.5.3",
     "circular-dependency-plugin": "^3.0.0",
@@ -65,14 +65,14 @@
     "file-loader": "^0.10.0",
     "html-webpack-plugin": "^3.2.0",
     "istanbul-instrumenter-loader": "^2.0.0",
-    "jasmine-core": "~2.6.2",
-    "jasmine-spec-reporter": "~4.1.0",
-    "karma": "^2.0.5",
-    "karma-chrome-launcher": "~2.1.1",
+    "jasmine-core": "~3.5.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~5.0.0",
+    "karma-chrome-launcher": "~3.1.0",
     "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.4.3",
-    "karma-jasmine": "^1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
     "less-loader": "^4.1.0",
     "node-sass": "^4.9.0",
     "postcss-loader": "^2.1.5",
@@ -83,7 +83,7 @@
     "source-map-loader": "^0.2.4",
     "style-loader": "^0.13.1",
     "stylus-loader": "^3.0.2",
-    "tslint": "~5.3.2",
+    "tslint": "~6.1.0",
     "url-loader": "^1.1.2"
   }
 }
