:up: Upgrade to Angular 13

--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
   "scripts": {
     "start-local": "ng serve",
     "ng": "./node_modules/.bin/ng",
+    "build": "ng build",
     "build:ssr": "npm run build:client-and-server-bundles && npm run webpack:server",
-    "serve:ssr": "ts-node ./src/server",
+    "serve:ssr": "node ./src/server",
     "build:client-and-server-bundles": "node ./node_modules/.bin/ng build && node ./node_modules/.bin/ng run app:server",
     "webpack:server": "webpack --config ./webpack.server.config.js --progress --colors",
     "install-dev": "npm install --only=development",
@@ -21,69 +22,37 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/build-angular": "~12.2.16",
-    "@angular/animations": "^12.2.16",
-    "@angular/common": "^12.2.16",
-    "@angular/core": "^12.2.16",
-    "@angular/forms": "^12.2.16",
-    "@angular/platform-browser": "^12.2.16",
-    "@angular/platform-browser-dynamic": "^12.2.16",
-    "@angular/platform-server": "^12.2.16",
-    "@angular/router": "^12.2.16",
-    "@types/jasmine": "~3.6.0",
-    "@types/jasminewd2": "^2.0.10",
-    "@types/lodash": "^4.14.179",
-    "@types/node": "^12.11.1",
-    "@vimeo/player": "^2.16.4",
+    "@angular/animations": "~13.0.0",
+    "@angular/cdk": "^13.1.2",
+    "@angular/common": "~13.0.0",
+    "@angular/compiler": "~13.0.0",
+    "@angular/core": "~13.0.0",
+    "@angular/forms": "~13.0.0",
+    "@angular/material": "^13.1.2",
+    "@angular/platform-browser": "~13.0.0",
+    "@angular/platform-browser-dynamic": "~13.0.0",
+    "@angular/router": "~13.0.0",
     "bowser": "^2.11.0",
-    "core-js": "^2.6.12",
-    "hoek": "^5.0.4",
+    "express": "^4.17.3",
     "lodash": "^4.17.21",
-    "protractor": "~7.0.0",
-    "rxjs": "^6.6.7",
-    "rxjs-compat": "^6.6.7",
-    "ts-loader": "^4.5.0",
-    "ts-node": "~3.2.0",
-    "tslib": "^2.0.0",
-    "typescript": "4.3.5",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12",
+    "rxjs": "~7.4.0",
+    "ts-node": "^10.7.0",
+    "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular/cli": "^12.2.16",
-    "@angular/compiler": "^12.2.16",
-    "@angular/compiler-cli": "^12.2.16",
-    "@angular/language-service": "^12.2.16",
-    "ajv": "^6.12.6",
-    "autoprefixer": "^6.5.3",
-    "circular-dependency-plugin": "^3.0.0",
-    "codelyzer": "^6.0.0",
-    "css-loader": "^0.28.11",
-    "cssnano": "^3.10.0",
-    "exports-loader": "^0.6.3",
-    "file-loader": "^0.10.0",
-    "html-webpack-plugin": "^3.2.0",
-    "istanbul-instrumenter-loader": "^2.0.0",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.3.17",
+    "@angular-devkit/build-angular": "~13.0.3",
+    "@angular/cli": "~13.0.3",
+    "@angular/compiler-cli": "~13.0.0",
+    "@types/file-saver": "^2.0.5",
+    "@types/jasmine": "~3.10.0",
+    "@types/node": "^12.11.1",
+    "jasmine-core": "~3.10.0",
+    "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "less-loader": "^4.1.0",
-    "node-sass": "^4.9.0",
-    "postcss-loader": "^2.1.5",
-    "postcss-url": "^7.3.2",
-    "raw-loader": "^0.5.1",
-    "sass-loader": "^6.0.7",
-    "script-loader": "^0.7.0",
-    "source-map-loader": "^0.2.4",
-    "style-loader": "^0.13.1",
-    "stylus-loader": "^3.0.2",
-    "tslint": "~6.1.0",
-    "url-loader": "^1.1.2"
+    "karma-jasmine-html-reporter": "~1.7.0",
+    "typescript": "~4.4.3"
   }
 }
