--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "bowser": "^2.11.0",
     "express": "^4.17.3",
     "lodash": "^4.17.21",
+    "ng-fittext": "^4.2.3",
     "rxjs": "~7.4.0",
     "ts-node": "^10.7.0",
     "tslib": "^2.3.0",
